# Faldrin-Engine

./: CMakeLists.txt
assets/maps/: Premium Charakter Spritesheet.tsx  Wooden_House_Roof_Tilset.tsx  doors.tsx  ground.tsx  houseObjects.tsx  houseWalls.tsx  mainIsland.tmx  paths.tsx  playerHouse.tmx  stonePaths.tsx  water.tsx
src/: helper.cpp  helper.h  main.cpp
src/engine/: Engine.cpp  Interaction.cpp  Interaction.h  Physics.cpp  Physics.h  Player.cpp  Player.h  temp.h
src/rendering/: Rendering.cpp  Rendering.h  Sprite.cpp  Sprite.h
